--- a/package.json
+++ b/package.json
@@ -4,22 +4,39 @@
   "description": "⚡️ minimal boilerplate based on express's typescript ⚡️",
   "main": "index.js",
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "tsc",
-    "dev": "tsc-watch --onSuccess \"node dist/server.js\"",
-    "start": "node dist/server.js"
+    "dev": "tsc-watch --onSuccess \"node dist/src/app.js\"",
+    "start": "node dist/src/app.js"
   },
   "author": "yoon sang seok - amamov",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "tsc-watch": "^4.2.9",
-    "typescript": "^4.2.4"
+    "express-session": "^1.17.1",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/hpp": "^0.2.1",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.0",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "ts-watch": "^1.0.8"
+    "@types/passport": "^1.0.6",
+    "tsc-watch": "^4.2.9",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.4"
   }
 }
