--- a/package.json
+++ b/package.json
@@ -11,32 +11,50 @@
   },
   "author": "yoon sang seok - amamov",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv": "^9.0.2",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "helmet": "^4.6.0",
-    "hpp": "^0.2.3",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
-  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.16",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/helmet": "^4.0.0",
     "@types/hpp": "^0.2.1",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
+    "@types/multer-s3": "^2.7.9",
     "@types/node": "^15.3.0",
     "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
+    "@types/ws": "^7.4.4",
+    "copyfiles": "^2.4.1",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "tsc": "^2.0.3",
     "tsc-watch": "^4.2.9",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.911.0",
+    "bcrypt": "^5.0.1",
+    "connect-redis": "^5.2.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.19",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "redis": "^3.1.2",
+    "socket.io": "^4.1.2"
   }
 }
