--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
+    "@types/validator": "^13.1.3",
     "@types/ws": "^7.4.4",
     "copyfiles": "^2.4.1",
     "nodemon": "^2.0.7",
@@ -55,6 +56,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "redis": "^3.1.2",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "validator": "^13.6.0"
   }
 }
