--- a/package.json
+++ b/package.json
@@ -29,8 +29,16 @@
     "@types/passport-local": "^1.0.33",
     "@types/validator": "^13.1.3",
     "@types/ws": "^7.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "copyfiles": "^2.4.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "tsc": "^2.0.3",
     "tsc-watch": "^4.2.9",
